syntax = "proto3";

package mypackage;

service AuthService {
    // Existing user-related methods
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc AddUser (AddUserRequest) returns (AddUserResponse);

    // New methods for password reset
    rpc VerifyResetToken (VerifyResetTokenRequest) returns (VerifyResetTokenResponse);
    rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse);
}

// Messages for getting a user
message GetUserRequest {
    string email = 1;
}

message GetUserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4; // Ensure this is stored securely
}

// Messages for adding a user
message AddUserRequest {
    string name = 1;
    string email = 2;
    string password = 3; // Ensure password is hashed before saving
}

message AddUserResponse {
    bool success = 1;
    string user_id = 2; // ID of the newly created user
}

// Messages for verifying the reset token
message VerifyResetTokenRequest {
    string token = 1;
}

message VerifyResetTokenResponse {
    bool valid = 1;
}

// Messages for resetting the password
message ResetPasswordRequest {
    string token = 1;
    string newPassword = 2;
}

message ResetPasswordResponse {
    bool success = 1;
    string message = 2;
}
